--- a/memoriaHTMLeCSS/02.CSS/aula16.html
+++ b/memoriaHTMLeCSS/02.CSS/aula16.html
@@ -4,11 +4,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title></title>
-		<link type="text/css" rel="stylesheet" href="" />
+		<title>16</title>
+		<link type="text/css" rel="stylesheet" href="aula16_Text.css" />
 	</head>
 	
 	<body>
-        
+        <div id="div1">
+			<h1>Texto1</h1>
+		</div>
+		<div id="div2">
+			<p>rejgaeihjgiahjgrigaehrighifdekjgasiderfkgjdzojngbfngbhszedfjroighnbjioedfrsznbthbgerfstdoijughnsredofitujghbndeorfiujthngeujiohngfdeoiujnhgoisruejnhoirthngrseiodnhrujnhsonoarngklfnkbnvrnfdkgjrnbkrjfkmnzkorhndknbirkfjknebnrnobddnborLorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, dolores repudiandae? Nesciunt obcaecati voluptatibus ipsa optio cumque velit. Ipsum vel quae expedita tenetur dicta velit voluptatem optio necessitatibus autem eum!</p>
+		</div>
+		<a href="">slaqlink</a>
+		<h2>outro texto</h2>
 	</body>
 </html>
