--- a/memoriaHTMLeCSS/02.CSS/aula18.html
+++ b/memoriaHTMLeCSS/02.CSS/aula18.html
@@ -14,6 +14,7 @@
         <div id="nnExiste">é ué</div>
         <div id="div3">Num compensa</div>
         <div id="talvezExista">Krai</div>
+        <div id="div4">Rapaz</div>
 
         <ul>
             <li>1</li>
