--- a/01.HTML/aula04_Imagens.html
+++ b/01.HTML/aula04_Imagens.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-        <img src="./pastaDeRecursos/carinha.jpg" width="1000px" height="1000px">
+        <img src="pastaDeRecursos/carinha.jpg" width="1000px" height="1000px">
         <a href="https://static.zerochan.net/Oguri.Cap.full.4477616.jpg"><img src="https://static.zerochan.net/Oguri.Cap.full.4477616.jpg"></a>
         <img src="img quebrada" alt="essa imagem está quebrada">
 	</body>
