--- a/02.CSS/aula23.html
+++ b/02.CSS/aula23.html
@@ -5,22 +5,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>23</title>
-		<link type="text/css" rel="stylesheet" href="aula23_DropDownEGap.css" />
+		<link type="text/css" rel="stylesheet" href="aula23_CentralizarUmaDiv.css" />
 	</head>
 	
 	<body>
-        <ul>
-            <li><p>link</p></li>
-            <li><p>link</p></li>
-            <li><p>link</p></li>
-            <li class="link">
-                <p>link</p>
-                <div class="container">
-                    <a href="">link</a>
-                    <a href="">link</a>
-                    <a href="">link</a>
-                </div>
-            </li>
-        </ul>
+        <div id="container">
+            <div id="box">Centralizado</div>
+        </div>
 	</body>
 </html>
