--- a/03.projetos/TelaDeLogin/index.htm
+++ b/03.projetos/TelaDeLogin/index.htm
@@ -21,7 +21,7 @@
                     <input placeholder="Senha" type="password">
                 </div>
 
-                <div class="remembre-forgot">
+                <div class="remember-forgot">
                     <label>
                         <input type="checkbox">
                         Lembrar minha senha
@@ -29,7 +29,7 @@
                     <a href="#">Esqueci minha senha</a>
                 </div>
 
-                <button type="submit">Login</button>
+                <button type="submit" class="login">Login</button>
 
                 <div class="register-link">
                     <p>Não tem uma conta <a href="#">Cadastre-se</a></p>
