--- a/04.manipulação_de_DOM/aula24_SelecionandoElementos.html
+++ b/04.manipulação_de_DOM/aula24_SelecionandoElementos.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>24</title>
-		<link type="text/css" rel="stylesheet" href="aula24.css" />
+		<link type="text/css" rel="stylesheet" href="style.css" />
 		<script type="text/javascript" src=""></script>
 	</head>
 	
